--- a/site/web/app/themes/host/assets/sass/components/_split-feature.scss
+++ b/site/web/app/themes/host/assets/sass/components/_split-feature.scss
@@ -232,6 +232,6 @@
     display: none;
 
     @include mq(large) {
-        display: block;
+        display: flex;
     }
 }
